# ProteinAnalysisTool

./: Cargo.toml  README.md  analysis_report.json  player.lua  residues_data.csv
pdbtbx-master/: CODE_OF_CONDUCT.md  README.md  changelog.md
pdbtbx-master/src/read/: read_options.rs
pdbtbx-master/src/read/mmcif/: parser.rs
pdbtbx-master/src/read/pdb/: lexer.rs  lexitem.rs  parser.rs
pdbtbx-master/src/save/: general.md
pdbtbx-master/src/structs/: general.md  mod.rs  pdb.rs  secondary_structure.rs
scripts/: example.lua  init.lua
src/: main.rs  shader.wgsl
src/analysis/: dihedrals.rs  dssp.rs  export.rs  hbonds.rs  hydrogen_bonds.rs  interactions.rs  mod.rs  ramachandran.rs  rmsd.rs  sasa.rs  sequence.rs
src/lua_api/: mod.rs  protein.rs  selection.rs
src/protein/: bonds.rs  fetch.rs  fetch_rcsb.rs  mod.rs  structure.rs
src/renderer/: camera.rs  mod.rs  pipeline.rs
src/selection/: evaluator.rs  mod.rs  parser.rs
src/surface/: distance_field.rs  marching_cubes.rs  mod.rs
