[package]
name = "pdbx_lua_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1"
winit = "0.29"
pollster = "0.3"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
notify = "6.1"
crossbeam-channel = "0.5"
glam = "0.25"
bytemuck = { version = "1.14", features = ["derive"] }
pdbtbx = { version = "0.12", features = ["rstar", "rayon"] }
reqwest = { version = "0.12", features = ["blocking"] }
rayon = "1.10"
glyphon = "0.5"
